# PackRat

./: .env.example  .eslintrc-front.js  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  .yarnrc.yml  Dockerfile  Dockerfile.prod  Dockerfile.prod.bun  LICENSE.txt  Makefile  README.md  app.json  bun.lockb  docker-compose.yml  eas.json  package-lock.json  package.json  q  tsconfig.base.json  tsconfig.json
.changeset/: config.json  five-llamas-repair.md  funny-pears-invent.md  gentle-months-walk.md  honest-buses-cry.md  silent-avocados-live.md
.github/: labeler.yml
.husky/: pre-commit  pre-push
app/: layout.tsx  package.json  page.tsx
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
client/: .eslintrc.js  .gitignore  Dockerfile  Podfile.example  _layout.js  app.example.json  app.json  babel.config.js  bun.lockb  eas.json  env.example  google-services.json  gradle.properties.example  index.js  linkData.js  metro.config.js  next.config.js  package-lock.json  package.json  queryClient.js  setup.js  tamagui.config.ts  trail (1).gpx  trpc.ts  tsconfig.json  webpack.config.js
packrat/: .gitignore  README.md  package.json
patches/: @tamagui+animations-react-native+1.76.0.patch  native-base+3.4.28.patch  osm-polygon-features+0.9.2+001+rename.patch  osm-polygon-features+0.9.2+002+repair.patch  osm-polygon-features+0.9.2+003+update-import.patch  osm-polygon-features+0.9.2.patch  osmtogeojson+3.0.0-beta.5.patch
scripts/: start.js
server/: .dev.vars  .dev.vars.example  .eslintrc.js  .gitignore  CHANGELOG.md  Dockerfile  README.md  app.js  config.js  index.js  (+21 more)
(+2046 files in other folders)
