[package]
name = "tauri"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.2", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.2", features = [] } 
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Custom protocol feature if still needed
custom-protocol = ["tauri/custom-protocol"]
